2014-02-25  Alessandro <aantonello@paralaxe.com.br>

	* CXmlFile.java (Load(CXmlTok)): Dumping stream output when the parser
	  fails.
	* AbstractView.java (invalidate()): Added function to invalidate the
	  operating View.
	* AbstractView.java (invalidate()): Added function to invalidate the
	  operating View.

2014-02-12  Alessandro <aantonello@paralaxe.com.br>

	* stream_t.java (dump()): Changed debugging output format.
	* CAndroidApp.java (openForAppend()): New function to open a file for
	  appending data to it.
	* CAndroidApp.java (deletePrivateFile()): Deletes a file open with one
	  of the available `openFor` functions.

2014-02-10  Alessandro <aantonello@paralaxe.com.br>

	* CAndroidPagerView.java (onInterceptTouchEvent()): Changed to better
	  control when the view will intercept the touch events and when not.
	  Enable component views to intercept touch events before the pager.

2014-02-09  Alessandro <aantonello@paralaxe.com.br>

	* CAndroidPagerView.java (onLayout()): Removed some debugging output.
	* CAndroidGridView.java (reload()): Added call to 'requestLayout()'
	  operation to see if Android realize that something changed.

2014-01-15  Alessandro <aantonello@paralaxe.com.br>

	* Makefile: Updated 'install' target to work in the same way in all
	  machines.
	* AbstractView.java (update(int)): New function to manually layout a
	  view hierarchy.
	* CRect.java (deflateMargins(View)): Buggy. Not all LayoutParams can be
	  casted to MarginLayoutParams.

2013-12-17  Alessandro <aantonello@paralaxe.com.br>

	* SFBluetoothSocket.java: Added bluetooth support.
	* sfBluetooth.java: Added bluetooth support.
	* ERROR.java (ERROR.NOTSUP): Added error constant.
	* res/jguime/pt_BR/errors.xml: Added message for new error constant.
	* res/jguime/en_US/errors.xml: Added message for new error constant.
	* thread_t.java (start()): When start() fails, the error code is stored
	  in and can be retrieved from getExitCode() method.